--- a/home.css
+++ b/home.css
@@ -152,6 +152,7 @@ header .navigation li a {
     width: 620px;
     padding-top: 50px;
     padding-bottom: 50px;
+    /* padding-right: 90px; */
 }
 
 .swiper-slide {
