--- a/items.css
+++ b/items.css
@@ -23,7 +23,7 @@ section {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: #161616;
+    background: #328700;
 }
 
 section .circle {
@@ -32,7 +32,7 @@ section .circle {
     left: 0;
     width: 100%;
     height: 100%;
-    background: #e51e2a;
+    background: #ffff00;
     clip-path: circle(70% at right -20%);
 }
 
@@ -49,7 +49,8 @@ header {
 
 header .logo {
     position: relative;
-    max-width: 150px;
+    width: 90px;
+    height: 60px;
 }
 
 header .navigation {
@@ -63,7 +64,7 @@ header .navigation li {
 
 header .navigation li a {
     display: inline-block;
-    color: #fff;
+    color: #000;
     font-weight: 500;
     text-decoration: none;
     margin-left: 40px;
